--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 @tailwind utilities;
 @media (max-width: 768px) {
     /* Define styles for screens with a maximum width of 768px */
+   
   }
   
 
@@ -29,4 +30,61 @@ body,
 
 table td{
     border-bottom: 1px solid gray
+}
+
+/* Add this CSS to your styles or stylesheet */
+.suggestions {
+    position: absolute;
+    width: 30%;
+    border: 1px solid #ccc;
+    max-height: 150px;
+    overflow-y: auto;
+    background-color: #fff;
+    z-index: 1;
+    color: blue;
+  }
+  
+  .suggestion {
+    padding: 8px;
+    cursor: pointer;
+  }
+  
+  .suggestion:hover {
+    background-color: #f0f0f0;
+  }
+  
+
+  /* Add this to your CSS file or in your component */
+.custom-confirm-modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  text-align: center;
+}
+
+.custom-confirm-modal h1 {
+  margin-bottom: 15px;
+  font-size: 18px;
+  padding: 20px;
+}
+
+.custom-confirm-modal button {
+  margin-top: 10px;
+  padding: 8px 16px;
+  background-color: #2196F3;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-left: 15px;
+}
+
+.custom-confirm-modal button:hover {
+  background-color: #0e77ca;
 }
